Add amsmath to tex template

--- a/template/template.tex
+++ b/template/template.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{listings}
 \usepackage[vmargin=1in,hmargin=1in]{geometry}
+\usepackage{amsmath}
 \title{PanthRBase Documentation}
 \author{PanthR Team}
 \begin{document}
